más cambios: imagen y actualización de html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>estamos aprendiendo sobre Git y GitHub</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut ullam quas molestiae excepturi temporibus impedit, sed hic magnam cum rem voluptas esse labore tempore ex, ea nulla. Amet, laudantium sapiente?</p>
+    <h2>Subtitulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, officiis quae inventore, perspiciatis dolorem voluptate beatae minus odio saepe nisi nemo accusamus? Asperiores, numquam sit provident veritatis aliquid odio a.</p>
 </body>
 </html>
